# bot

./: .gitignore  CMakeLists.txt  arduino.ino  run.cmd
src/: main.cpp
